[package]
name = "uniswap_indexer"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "1.2.1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
eyre = "0.6"
dotenv = "0.15"

serde = { version = "1.0", features = ["derive"] }
csv = "1.3"
chrono = "0.4"

# Профессиональная математика
bigdecimal = "0.4.10"
num-bigint = "0.4.6"
num-traits = "0.2.19"